# NotesToNotion

./: .env.example  .gitignore  MVP_STEP1.md  claude.md  main.py  pyproject.toml  requirements.txt  test_parser.py
backups/: test.md
src/: __init__.py  config.py  engine.py  exceptions.py
tests/: __init__.py  conftest.py  test_engine.py
